--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,12 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.3",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^12.0",
         "laravel/scout": "^10.14",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "meilisearch/meilisearch-php": "^1.13",
         "opcodesio/log-viewer": "^3.15",
         "spatie/laravel-permission": "^6.16"
     },
