--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@algolia/autocomplete-js": "^1.18.1",
+        "@algolia/autocomplete-theme-classic": "^1.18.1",
+        "@meilisearch/autocomplete-client": "^0.6.0",
+        "algoliasearch": "^5.23.0",
         "quill": "^2.0.3"
     }
 }
