--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": "^8.2",
         "filament/filament": "^3.3",
         "http-interop/http-factory-guzzle": "^1.2",
+        "laravel/cashier": "^15.6",
         "laravel/framework": "^12.0",
         "laravel/scout": "^10.14",
         "laravel/tinker": "^2.10.1",
