--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "meilisearch/meilisearch-php": "^1.13",
         "mews/purifier": "^3.4",
         "opcodesio/log-viewer": "^3.15",
+        "romanzipp/laravel-queue-monitor": "^5.4",
         "spatie/laravel-permission": "^6.16",
         "symfony/http-client": "^7.2",
         "symfony/mailgun-mailer": "^7.2"
