--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/scout": "^10.14",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
+        "malzariey/filament-daterangepicker-filter": "^4.0",
         "meilisearch/meilisearch-php": "^1.13",
         "mews/purifier": "^3.4",
         "opcodesio/log-viewer": "^3.15",
