--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/cashier": "^15.6",
         "laravel/framework": "^12.0",
         "laravel/scout": "^10.14",
+        "laravel/socialite": "^5.23",
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6",
         "malzariey/filament-daterangepicker-filter": "^4.0",
