--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "meilisearch/meilisearch-php": "^1.13",
         "mews/purifier": "^3.4",
         "opcodesio/log-viewer": "^3.15",
+        "pragmarx/google2fa-laravel": "^2.3",
         "romanzipp/laravel-queue-monitor": "^5.4",
         "spatie/laravel-permission": "^6.16",
         "symfony/http-client": "^7.2",
